<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
  		<groupId>org.jzy3d</groupId>
  		<artifactId>panama-gl</artifactId>
		<version>1.1.0-SNAPSHOT</version>
  	</parent>

    <artifactId>panama-gl-ui-javafx</artifactId>
    <packaging>jar</packaging>

    <name>Panama GL UI - JavaFX</name>

    <properties>
        <main.class>hellofx.HelloFX</main.class>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>19</maven.compiler.release>
        <javafx.version>19</javafx.version>
        <charm.version>6.2.2</charm.version>
        <charm.cloudlink.version>6.0.7</charm.cloudlink.version>
        <glisten.afterburner.version>2.1.0</glisten.afterburner.version>
        <attach.version>4.0.16</attach.version>
        <connect.version>2.0.1</connect.version>
        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
        <gluonfx.maven.plugin.version>1.0.16</gluonfx.maven.plugin.version>
        <gluonfx.target>host</gluonfx.target>

    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

		<dependency>
			<groupId>org.jzy3d</groupId>
			<artifactId>panama-gl-api</artifactId>
			<version>${project.version}</version>
		</dependency>

        <dependency>
            <groupId>org.jzy3d</groupId>
            <artifactId>panama-gl-wrappers-macos</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jzy3d</groupId>
            <artifactId>panama-gl-wrappers-windows</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jzy3d</groupId>
            <artifactId>panama-gl-wrappers-linux</artifactId>
            <version>${project.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
			<!-- Defines compiler flags and source/byte code version  -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>19</source>
					<target>19</target>
					<encoding>UTF-8</encoding>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.maven.plugin.version}</version>
                <configuration>
                     <target>${gluonfx.target}</target>
                     <mainClass>${main.class}</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>ios</id>
            <properties>
                <gluonfx.target>ios</gluonfx.target>
            </properties>
        </profile>
        <profile>
            <id>android</id>
            <properties>
                <gluonfx.target>android</gluonfx.target>
            </properties>
        </profile>
    </profiles>

</project>
